force-app/main/default/objects/CommSubscription/CommSubscription.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>