force-app/main/default/objects/CommSubscription/fields/Email_Opt_In_Out_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Out_Event_Date__c</fullName>
    <label>Email Opt In/Out Event Date</label>
    <type>DateTime</type>
</CustomField>