force-app/main/default/objects/CommSubscription/fields/Email_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Reason__c</fullName>
    <label>Email Opt Out Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>