force-app/main/default/objects/CommSubscription/fields/Email_Status_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Status_Event_Date__c</fullName>
    <label>Email Status Event Date</label>
    <type>DateTime</type>
</CustomField>