force-app/main/default/objects/CommSubscription/fields/Is_Subscription_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscription Active</label>
    <type>Checkbox</type>
</CustomField>