force-app/main/default/objects/CommSubscription/fields/Marketing_Cloud_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Marketing Cloud Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>