force-app/main/default/objects/CommSubscription/fields/MC_Communication_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>MC_Communication_Subscription_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Communication Subscription Id</label>
    <type>Text</type>
</CustomField>