force-app/main/default/objects/CommSubscription/fields/MC_Subscription_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>MC_Subscription_Owner_Id__c</fullName>
    <formula>CASESAFEID(Subscription_Owner__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Subscription Owner Id</label>
    <type>Text</type>
</CustomField>