force-app/main/default/objects/CommSubscription/fields/Newsletter_Topics__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Topics__c</fullName>
    <label>Newsletter Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>African insights</fullName>
            </value>
            <value>
                <fullName>China Africa opportunities</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Investor insights</fullName>
            </value>
            <value>
                <fullName>Sectors</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>