force-app/main/default/objects/CommSubscription/fields/Newsletter_WEM_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_WEM_Subscriber_ID__c</fullName>
    <label>Newsletter/WEM Subscriber ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>