force-app/main/default/objects/CommSubscription/fields/Subscription_Owner__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Owner</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Communication Subscriptions</relationshipLabel>
    <relationshipName>Communication_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>