force-app/main/default/objects/CommSubscription/validationRules/Has_Subscription_Owner_got_emailI.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_Subscription_Owner_got_emailI</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Subscription_Owner__c )),
            ISBLANK(Subscription_Owner__r.Email_Address__c) )</errorConditionFormula>
    <errorMessage>Subscription Owner has to got an email filled</errorMessage>
</ValidationRule>